WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173501
[WebRTC] CrashTracer: Regression : com.apple.WebKit.Networking at WebKit: WebKit::LibWebRTCSocketClient::sendTo
https://bugs.webkit.org/show_bug.cgi?id=173501
Summary
[WebRTC] CrashTracer: Regression : com.apple.WebKit.Networking at WebKit: Web...
youenn fablet
Reported
2017-06-16 17:38:55 PDT
6/9/17, 4:58 AM Data Analytics System: * APPLICATION: com.apple.WebKit.Networking * SIGNATURE: WebKit: WebKit::LibWebRTCSocketClient::sendTo * MORE INFORMATION:
https://crashtracer.ios.apple.com/signature/show/17712695?app=10199&build=15A5278f&users=all
Summary of a selection of backtraces attributed to this bug. The stack frame considered to be the unique "crash signature" is highlighted ==> like this <==. This frame is used for aggregation when filing these bugs and does not necessarily imply fault. 6 WebKit: WebKit::LibWebRTCSocketClient::sendTo(WebCore::SharedBuffer const&, rtc::SocketAddress const&, rtc::PacketOptions const&) <== 6 WebKit: WebKit::NetworkRTCProvider::OnMessage(rtc::Message*) 6 WebKit: WebKit::NetworkRTCProvider::OnMessage(rtc::Message*) 6 libwebrtc.dylib: rtc::MessageQueue::Dispatch(rtc::Message*) 6 libwebrtc.dylib: rtc::Thread::Run() 6 libwebrtc.dylib: rtc::Thread::PreRun(void*) 6 libsystem_pthread.dylib: _pthread_body 6 libsystem_pthread.dylib: _pthread_start 6 libsystem_pthread.dylib: * STATISTICS This crash has been reported 6 times. It was first seen in 15A5278f and as of this filing: com.apple.WebKit.Networking version 8604.1.21.10. * RADAR THRESHOLD This radar was generated as this crash is a regression. * ABOUT This bug was automatically generated based on user crash reports. Further details on how CrashTracer generates these bugs and the appropriate process for handling them may be found at:
https://connectme.apple.com/docs/DOC-454185
Questions, Comments, Concerns? email:
crashtracer-help@group.apple.com
Attachments
Patch
(6.04 KB, patch)
2017-06-16 17:43 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-06-16 17:43:05 PDT
Created
attachment 313167
[details]
Patch
youenn fablet
Comment 2
2017-06-16 17:43:29 PDT
rdar://problem/32672782
WebKit Commit Bot
Comment 3
2017-06-16 20:42:37 PDT
Comment on
attachment 313167
[details]
Patch Clearing flags on attachment: 313167 Committed
r218441
: <
http://trac.webkit.org/changeset/218441
>
WebKit Commit Bot
Comment 4
2017-06-16 20:42:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug